--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -11,7 +11,7 @@
                 <!--EventMboa-->
                 <!--</a>-->
                 <ul class="nav navbar-nav" ng-if="!lieu">
-                    <li class=""><a href="#" ui-sref="events" data-nav-section="home"><span
+                    <li class=""><a ui-sref="events({id:'',target:''})" data-nav-section="home"><span
                             translate>Parcourir</span></a></li>
                 </ul>
             </div>
