--- a/public/templates/user/mot-de-passe.html
+++ b/public/templates/user/mot-de-passe.html
@@ -2,6 +2,7 @@
     <h1 class="bold" translate>Votre mot de passe</h1>
     <div class="row">
         <div class="col-lg-6">
+            <p class="message">{{message}}</p>
             <form ng-submit="modifierMotDePasse(m)">
                 <div class="form-group" >
                     <label translate>mot de passe actuel</label>
