--- a/public/css/style.css
+++ b/public/css/style.css
@@ -709,7 +709,7 @@ div.free{
     width: auto;
     height: auto;
     border: 0;
-    padding: 11px 50px;
+    padding: 11px 12px;
     text-decoration: none;
     line-height: 22px;
     font-weight: bold;
@@ -1214,4 +1214,17 @@ ul .row{
 .image img {
     width: 100%;
     height: 100%
+}
+
+#detail .image img {
+    width: 30%;
+    height: 100%
+}
+
+.modal .btn-white{
+    font-size: 17px !important;
+}
+
+.modal .row{
+    margin-bottom: 0px;
 }
