--- a/public/templates/event/mode_paiement.html
+++ b/public/templates/event/mode_paiement.html
@@ -1,57 +1,71 @@
-<section id="gerer">
+<div id="content">
     <div class="container">
-
-        <div class="row" style="margin-top: 50px">
-
-            <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12">
+        <div class="row" style="margin-top: 30px">
+            <div class="col-lg-12 col-sm-12 col-md-12">
+                <h1 class="bold"> <ff translate>Mode de paiement pour</ff> <span class="blue">{{event.name}}</span></h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-9">
                 <div class="tabbable">
-                    <ul class="nav nav-tabs text-center">
-                        <li ng-class="{'active':choix=='online'}">
-                            <a ng-click="choixEvent(0)" data-toggle="tab">
-                                {{eventOnline.length}}<br/>
-                                <ff translate>Evénements à venir</ff>
-                            </a>
-                        </li>
-                        <li ng-class="{'active':choix=='save'}">
-                            <a ng-click="choixEvent(1)" data-toggle="tab">
-                            {{eventSave.length}}<br/>
-                                <ff translate>Evénements sauvegardés</ff>
-                            </a></li>
-                        <!--<li ng-class="{'active':choix=='passed'}">-->
-                        <!--<a ng-click="choixEvent(2)" data-toggle="tab">-->
-                        <!--{{eventPassed.length}}<br/>-->
-                        <!--<ff translate>Evénements antérieurs</ff>-->
-                        <!--</a></li>-->
-                    </ul>
                     <div class="tab-content" style="border-top: 2px solid #f1f1f1; padding-top: 15px;">
-                        <div class="row-fluid">
-                            <div class="col-lg-12 text-center" ng-if="events.length==0" style="background: #eee">
-                                <img src="images/simple-black-calendar-512.png" style="width: 20% !important; text-align: center" />
-                                <p translate>Vous n'avez aucun événements</p>
-                            </div>
-                        </div>
-                        <div ng-if="events.length>0" class="row"
-                             dir-paginate="e in events | orderBy : '-start_date' : true| itemsPerPage: par_page ">
-                            <div class="event" ng-click="choixBillet(e)">
-                                <div class="col-lg-3">
-                                    <div class="image" style="height:100px; cursor: pointer">
-                                        <img src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
-                                    </div>
-
-                                </div>
+                        <div ng-if="billets.length>0" class="row"
+                             dir-paginate="b in billets | orderBy : '-start_date' : true| itemsPerPage: par_page ">
+                            <div class="event">
                                 <div class="col-lg-9">
-                                    <div class="item-9" >
-                                        <div class="date">{{e.date_debut}}</div>
-                                        <div class="titre">{{e.name}}</div>
-                                        <div class="lieu">
-                                            {{e.description|limitTo:50}}
-                                            <!--Commande n° {{e.billet.numero_commande}} de {{e.billet.quantity}} Billets le {{e.billet.date}} -->
-                                        </div>
+                                    <a><h3>{{b.ticket.name}}</h3></a>
+                                    <p>{{b.ticket.description}}</p>
+                                    <div class="e-date">
+                                        <ff class="bold" translate>Prix du billet</ff> : {{b.ticket.amount}} Fcfa
+                                        &nbsp;
+                                        &nbsp;
+                                        <ff class="bold" translate>Quantité</ff> : {{b.quantite}}
+
                                     </div>
+                                </div>
+
+                                <div class="col-lg-9">
+                                    <ul class="nav navbar-nav">
+                                        <li>
+                                            <a ng-click="annulerCommande(b)"><i class="fa fa-times"></i>
+                                                <ff translate>Annuler</ff>
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
                         </div>
+                        <div class="row">
+                            <ff class="bold" translate>Montant à payer</ff> : <span class="blue bold">{{montant}} Fcfa</span>
+                        </div>
+                        <form class="row">
+                            <div class="col-lg-8">
+                                <div class="form-group">
+                                    <label>Mode de paiement</label>
+                                    <select class="form-control" ng-model="mode_paiement">
+                                        <option value="" disabled translate>Selectionner le mode de paiement</option>
+                                        <option value="om" translate>Orange Mone</option>
+                                        <option value="paypal" translate>PayPal</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group" ng-if="mode_paiement=='om'">
+                                    <p translate>Afin de valider votre achat, bien vouloir effectuer le transfert Orange Money du dit montant au numéro de téléphone ci-dessous.</p>
+                                    <p class="blue">+ XXX XXX XXX XXX</p>
+                                    <p translate>Pour des soucis de validation, bien vouloir renseigner le numéro orange money avec lequel vous comptez faire le trasfert</p>
+                                    <label translate>Numéro Orange money de la trasaction</label>
+                                    <input type="text" ng-model="numero_om" class="form-control" placeholder="+ 237 696 696 696"/>
+
+                                    <button class="btn btn-main" translate>
+                                        Valider
+                                    </button>
+                                </div>
+                                <div class="form-group" ng-if="mode_paiement=='paypal'" translate>
+                                    Zone reservée aux corrdonées PayPal
+                                </div>
+                            </div>
+                        </form>
                         <div class="text-center">
                             <dir-pagination-controls></dir-pagination-controls>
                         </div>
@@ -61,37 +75,5 @@
             </div>
         </div>
     </div>
-</section>
-
-<div class="modal fade" id="billetModal" tabindex="-1" role="dialog" aria-labelledby="Agent" aria-hidden="true">
-    <div class="modal-dialog" style="width: 35%;">
-        <div class="modal-header" style="background: #EFF2F5">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title text-center text-uppercase bold">
-                <ff translate>Commande pour</ff>
-                {{billet.titre}}
-            </h4>
-        </div>
-        <div class="modal-body" style="background: #F8F8FA">
-            <div class="row">
-                <div class="col-lg-4 form-group">
-                    <label translate>Type</label>
-                    <div>{{billet.billets[0].type}}</div>
-                </div>
-                <div class="col-lg-4 form-group">
-                    <label translate>Type</label>
-                    <div>{{billet.billets[0].type}}</div>
-                </div>
-                <div class="col-lg-4 form-group">
-                    <label translate>Type</label>
-                    <div>{{billet.billets[0].type}}</div>
-                </div>
-
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-main" type="submit" translate>Enregistrer</button>
-            <button id="close" class="btn btn-main hide" data-dismiss="modal" translate>Fermer</button>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    <!-- /.container -->
+</div>
