--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="" ng-if="lieu"><a ui-sref="events"><span translate>Parcourir</span></a></li>
-                    <li class=""><a href="#"><span translate>Aide</span></a></li>
+                    <li class=""><a ui-sref="aide"><span translate>Aide</span></a></li>
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="register"><span translate>Ouvrir un compte</span></a>
                     </li>
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate>Se connecter</span></a>
