--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -54,6 +54,10 @@
             </div>
         </form>
 
+        <div class="row">
+            <iframe src="http://www.wiicod.com" class="col-lg-12" height="200px" frameborder="0"></iframe>
+        </div>
+
         <h3>
             <ff translate>Evénement pour vous</ff>
         </h3>
