--- a/public/templates/user/billet-detail.html
+++ b/public/templates/user/billet-detail.html
@@ -38,7 +38,7 @@
 
             <div class="col-lg-3">
                 <div class="btn btn-main btn-block" translate="">Imprimer les billets</div>
-                <div class="btn btn-main btn-reverse btn-block" translate="">Annuler la commande</div>
+                <div class="btn btn-main btn-reverse btn-block" translate ng-click="annulerCommande()">Annuler la commande</div>
                 <div class="btn btn-main btn-reverse btn-block">
                     <ff translate>Contacter</ff>
                     <br/>
