--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -33,7 +33,7 @@
                         <a ui-sref="events({target:e.event_type.name,id:'type'})">#{{e.event_type.name}}</a>
                     </div>
                     <div class="action">
-                        <a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
+                        <!--<a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>-->
                         <a class="pull-right" title="Sauvegarder" ng-click="interest(e)"><i
                                 class="fa fa-bookmark-o"></i></a>
                     </div>
