--- a/public/templates/event/index.html
+++ b/public/templates/event/index.html
@@ -53,6 +53,19 @@ _________________________________________________________ -->
                     <!--</li>-->
                 </ul>
 
+                <h5 translate>Publicité</h5>
+
+                <div class="row" ng-repeat="p in pub |orderBy:'-update_at':true| limitTo:3">
+                    <div class="col-md-12 col2 pub">
+                        <a href="{{p.url}}"
+                           class="b-link-stroke b-animate-go  thickbox">
+                            <img src="{{p.banner_picture}}" class="img-responsive" alt="{{p.title}}"/>
+                            <div class="b-wrapper">
+                                <h3 class="b-animate b-from-left    b-delay03 ">{{p.title}}</br> - <br/>{{p.company}}</h3>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
             <!-- /.col-md-3 -->
 
