--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -54,10 +54,6 @@
             </div>
         </form>
 
-        <div class="row">
-            <iframe src="http://www.wiicod.com" class="col-lg-12" height="200px" frameborder="0"></iframe>
-        </div>
-
         <h3>
             <ff translate>Evénement pour vous</ff>
         </h3>
@@ -90,7 +86,7 @@
                             <a ui-sref="events({target:e.event_type.name,id:'type'})">#{{e.event_type.name|limitTo:15}}</a>
                         </div>
                         <div class="action">
-                            <a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
+                            <!--<a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>-->
                             <a class="pull-right" title="Sauvegarder" ng-click="interest(e)"><i
                                     class="fa fa-bookmark-o"></i></a>
                         </div>
@@ -103,6 +99,23 @@
             <div class="clearfix"></div>
             <div class="text-center">
                 <a ui-sref="events" class="btn btn-primary btn-main" translate>Plus d'événements</a>
+            </div>
+        </div>
+
+        <h5 translate>Publicité</h5>
+
+        <div class="row">
+            <div class="content_middle">
+                <div class="col-md-4 col2 pub" ng-repeat="p in pub | orderBy:'-update_at':true|limitTo:3">
+                    <a href="{{p.url}}"
+                       class="b-link-stroke b-animate-go  thickbox">
+                        <img src="{{p.banner_picture}}" class="img-responsive" alt="{{p.title}}"/>
+                        <div class="b-wrapper">
+                            <h3 class="b-animate b-from-left    b-delay03 ">{{p.title}}</br> - <br/>{{p.company}}</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="clearfix"> </div>
             </div>
         </div>
 
