--- a/public/templates/user/index.html
+++ b/public/templates/user/index.html
@@ -29,16 +29,16 @@
                                     passe</a></li>
                                 <li ng-class="{'active':choix=='sociaux'}" ng-click="choix='sociaux'"><a
                                         ui-sref="sociaux" translate>Paramètres sociaux</a></li>
-                                <li ng-class="{'active':choix=='om'}" ng-click="choix='om'"><a ui-sref="om" translate>Orange
-                                    Money</a></li>
-                                <li ng-class="{'active':choix=='carte'}" ng-click="choix='carte'"><a ui-sref="carte"
-                                                                                                     translate>Cartes
-                                    bancaires</a></li>
+                                <!--<li ng-class="{'active':choix=='om'}" ng-click="choix='om'"><a ui-sref="om" translate>Orange-->
+                                    <!--Money</a></li>-->
+                                <!--<li ng-class="{'active':choix=='carte'}" ng-click="choix='carte'"><a ui-sref="carte"-->
+                                                                                                     <!--translate>Cartes-->
+                                    <!--bancaires</a></li>-->
                                 <li><a ui-sref="close" translate>Fermer le compte</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="panel">
+                    <div class="panel hide">
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse2">
