--- a/public/templates/user/gestion/index-gestion.html
+++ b/public/templates/user/gestion/index-gestion.html
@@ -21,7 +21,7 @@
             <div class="choice" ui-sref="create({id:event.old_id,target:'modifier'})" translate>
                 Modifier
             </div>
-            <div class="choice" ui-sref="create({id:event.old_id,target:'visualisation'})" translate>
+            <div class="choice hide" ui-sref="create({id:event.old_id,target:'visualisation'})" translate>
                 Design
             </div>
             <div class="choice active" ui-sref="gestion({id:old_id})" translate>
@@ -43,7 +43,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div class="panel">
+                    <div class="panel hide">
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse1">
@@ -59,7 +59,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="panel">
+                    <div class="panel hide">
                         <div class="panel-heading">
                             <h4 class="">
                                 <a data-toggle="collapse" data-parent="#accordion" href="/#collapse2">
