--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -18,12 +18,12 @@
             <div style="float: left; width: 24%" ng-if="lieu">
                 <form ng-submit="searchEvent(key)">
                     <input type="text" ng-model="key" required class="input"
-                           placeholder="{{'Recherche d\'événements ';''|translate}}"/>
+                           placeholder="{{'Recherche d\'événements '|translate}}"/>
                 </form>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="" ng-if="lieu"><a ui-sref="events"><span translate>Parcourir</span></a></li>
+                    <li class="" ng-if="lieu"><a ui-sref="events({id:'',target:''})"><span translate>Parcourir</span></a></li>
                     <li class=""><a ui-sref="aide"><span translate>Aide</span></a></li>
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="register"><span translate>Ouvrir un compte</span></a>
                     </li>
@@ -59,7 +59,7 @@
                             <li><a href="#" ng-click="logout()" translate>Se déconnecter</a></li>
                         </ul>
                     </li>
-                    <li class="active" ng-if="loguer"><a ui-sref="create"><span translate>Créer un événement</span></a>
+                    <li class="active" ng-if="loguer"><a ui-sref="create({id:'',target:''})"><span translate>Créer un événement</span></a>
                     </li>
                     <li class="active" ng-if="!loguer"><a ng-click="create_event()"><span
                             translate>Créer un événement</span></a>
