--- a/public/templates/user/profil.html
+++ b/public/templates/user/profil.html
@@ -16,18 +16,48 @@
         </div>
         <div class="row">
             <form ng-submit="enregistrerOrgansiateur(organisateur)">
-                <div class="col-lg-3 text-center">
-                    <p style="padding: 10px;background: white;border: 1px solid #eee;">
-                        <i ng-if="no_image && organisateur.image==undefined" class="fa fa-user fa-4x" style="font-size: 8em;"></i>
-                        <img src="{{organisateur.image}}" id="image" alt="" style="width: 100%"/>
-                    </p>
-                    <p style="font-size: 15px" translate>
-                        JPG, GIF ou PNG de moins de 1MO. Ce sont les images carrées qui rendent le mieux.
-                    </p>
-                    <input type="file" style="display: none"
-                           id="im" onchange="angular.element(this).scope().fileNameChanged(this)">
-                    <a class="btn btn-main btn-reverse bold" ng-click="click_im()" translate>Choisir un fichier</a>
+                <div class="col-lg-3">
+                    <div class="drop-box center" ngf-drop ngf-select ng-model="organisateur.image"
+                         ngf-drag-over-class="'dragover'" ngf-multiple="false" ngf-allow-dir="true"
+                         accept=".jpg,.png,.jpeg,.JPG,.PNG,.JPEG"
+                         ngf-pattern="'.jpg,.png,.jpeg,.JPG,.PNG,.JPEG'"
+                         id="image_boutique" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()">
+                        <div class="row" ng-hide="organisateur.image">
+                            <div class="col-lg-12">
+                                <i class="fa fa-camera"></i>
+                                <br/>
+                                <div class="text-uppercase" translate>Ajouter une image de l'événement</div>
+                                <p class="small-text" translate>
+                                    Choississez une belle image que représentera votre événement
+                                </p>
+                            </div>
+                            <div class="col-lg-6">
+                                <img src="" id="image" alt=""/>
+                            </div>
+                        </div>
+                        <div ng-show="organisateur.image" class="row">
+
+                            <img class="event-previous-imagze thumb " width="200px" alt="Event banner"
+                                 ngf-thumbnail="organisateur.image">.
+                        </div>
+                    </div>
+                    <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
+
+                    <!--<img src="images/loc.png" id="image_boutique" width="100px" height="100px" >-->
+                    <input type="file" name="icone_boutique" id="id_icone_boutique"  class="hide">
                 </div>
+                <!--<div class="col-lg-3 text-center">-->
+                    <!--<p style="padding: 10px;background: white;border: 1px solid #eee;">-->
+                        <!--<i ng-if="no_image && organisateur.image==undefined" class="fa fa-user fa-4x" style="font-size: 8em;"></i>-->
+                        <!--<img src="{{organisateur.image}}" id="image" alt="" style="width: 100%"/>-->
+                    <!--</p>-->
+                    <!--<p style="font-size: 15px" translate>-->
+                        <!--JPG, GIF ou PNG de moins de 1MO. Ce sont les images carrées qui rendent le mieux.-->
+                    <!--</p>-->
+                    <!--<input type="file" style="display: none"-->
+                           <!--id="im" onchange="angular.element(this).scope().fileNameChanged(this)">-->
+                    <!--<a class="btn btn-main btn-reverse bold" ng-click="click_im()" translate>Choisir un fichier</a>-->
+                <!--</div>-->
 
                 <div class="col-lg-8">
                     <div class="form-group">
@@ -44,7 +74,7 @@
                     </div>
                     <div class="form-group">
                         <label translate>Site web</label>
-                        <input type="url" ng-model="organisateur.web_site" placeholder="http://" class="form-control"/>
+                        <input type="text" ng-model="organisateur.web_site" placeholder="wiicod.com" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label translate>Page Facebook</label>
